--- a/SocialConnect/Base.lproj/Main.storyboard
+++ b/SocialConnect/Base.lproj/Main.storyboard
@@ -18,78 +18,111 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4rp-Hs-LCH">
-                                <rect key="frame" x="200" y="20" width="200" height="30"/>
+                                <rect key="frame" x="235" y="20" width="130" height="27"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="LcS-Ad-ZEY"/>
+                                    <constraint firstAttribute="width" constant="130" id="LcS-Ad-ZEY"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="Login with Facebook"/>
                                 <connections>
                                     <action selector="loginFacebookPress:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CXT-s3-dBQ"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="feO-rC-ZLT">
-                                <rect key="frame" x="200" y="58" width="200" height="30"/>
+                                <rect key="frame" x="235" y="55" width="130" height="27"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="TZV-5J-HWy"/>
+                                    <constraint firstAttribute="width" constant="130" id="TZV-5J-HWy"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="Login with Google"/>
                                 <connections>
                                     <action selector="loginGooglePress:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UQB-E9-Kwh"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I9R-rr-1tm">
-                                <rect key="frame" x="200" y="550" width="200" height="30"/>
+                                <rect key="frame" x="235" y="553" width="130" height="27"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="Mbp-AA-5sb"/>
+                                    <constraint firstAttribute="width" constant="130" id="Mbp-AA-5sb"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="Logout"/>
                                 <connections>
                                     <action selector="logoutPress:" destination="BYZ-38-t0r" eventType="touchUpInside" id="p7Y-0x-TWY"/>
                                 </connections>
                             </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Ybn-On-ukn">
-                                <rect key="frame" x="8" y="96" width="584" height="370"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Ybn-On-ukn">
+                                <rect key="frame" x="8" y="90" width="584" height="350"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0LD-gK-5D2">
-                                <rect key="frame" x="200" y="474" width="200" height="30"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <rect key="frame" x="235" y="483" width="130" height="27"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="bdf-tG-BSm"/>
+                                    <constraint firstAttribute="width" constant="130" id="bdf-tG-BSm"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="FB User Data"/>
                                 <connections>
                                     <action selector="getFBUserData:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NtO-uF-gZt"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FPh-Dn-aXt">
-                                <rect key="frame" x="200" y="512" width="200" height="30"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <rect key="frame" x="235" y="518" width="130" height="27"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="Xkt-jT-GKN"/>
+                                    <constraint firstAttribute="width" constant="130" id="Xkt-jT-GKN"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="FB ids For Business"/>
                                 <connections>
                                     <action selector="getFBIdsForBusiness:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wBI-1I-j2R"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qVf-ID-tZB">
+                                <rect key="frame" x="235" y="448" width="130" height="27"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="130" id="ixB-rV-mY2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="GG Access Token"/>
+                                <connections>
+                                    <action selector="getGGAccessToken:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ORH-bi-yaR"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Xp-JG-IfK">
+                                <rect key="frame" x="373" y="448" width="100" height="27"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="jMG-fd-374"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="GG Disconnect"/>
+                                <connections>
+                                    <action selector="ggDisconnectPress:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hZG-j1-yUx"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="I9R-rr-1tm" secondAttribute="bottom" constant="20" id="1nB-Rw-phc"/>
+                            <constraint firstItem="qVf-ID-tZB" firstAttribute="top" secondItem="Ybn-On-ukn" secondAttribute="bottom" constant="8" id="9qg-1m-fOE"/>
                             <constraint firstItem="Ybn-On-ukn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="8" id="F8h-ff-MIB"/>
+                            <constraint firstItem="9Xp-JG-IfK" firstAttribute="leading" secondItem="qVf-ID-tZB" secondAttribute="trailing" constant="8" id="JxR-5A-AQW"/>
                             <constraint firstItem="feO-rC-ZLT" firstAttribute="top" secondItem="4rp-Hs-LCH" secondAttribute="bottom" constant="8" id="MCI-dv-poU"/>
                             <constraint firstItem="FPh-Dn-aXt" firstAttribute="top" secondItem="0LD-gK-5D2" secondAttribute="bottom" constant="8" id="PXV-XF-kIw"/>
+                            <constraint firstItem="9Xp-JG-IfK" firstAttribute="centerY" secondItem="qVf-ID-tZB" secondAttribute="centerY" id="Vae-ux-EXm"/>
                             <constraint firstItem="4rp-Hs-LCH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Zt7-15-67z"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="I9R-rr-1tm" secondAttribute="bottom" constant="20" id="aVn-mK-hj6"/>
+                            <constraint firstItem="0LD-gK-5D2" firstAttribute="top" secondItem="qVf-ID-tZB" secondAttribute="bottom" constant="8" id="b00-Qw-QQQ"/>
                             <constraint firstItem="I9R-rr-1tm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dm8-fR-qdK"/>
                             <constraint firstItem="Ybn-On-ukn" firstAttribute="top" secondItem="feO-rC-ZLT" secondAttribute="bottom" constant="8" id="drG-JM-qnD"/>
+                            <constraint firstItem="qVf-ID-tZB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fs5-Dr-O7q"/>
                             <constraint firstItem="0LD-gK-5D2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kgl-LO-iRB"/>
-                            <constraint firstItem="0LD-gK-5D2" firstAttribute="top" secondItem="Ybn-On-ukn" secondAttribute="bottom" constant="8" id="mnb-tE-eNg"/>
                             <constraint firstItem="FPh-Dn-aXt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nBI-Ab-7Ws"/>
                             <constraint firstItem="I9R-rr-1tm" firstAttribute="top" secondItem="FPh-Dn-aXt" secondAttribute="bottom" constant="8" id="noS-Az-LLV"/>
                             <constraint firstAttribute="trailing" secondItem="Ybn-On-ukn" secondAttribute="trailing" constant="8" id="vaj-iG-i89"/>
